# qnarre

./: .data  .editorconfig  .gitignore  .gitmodules  .model  .rustfmt.toml  Cargo.toml  Gemfile  README.md  build.rs  env-tf.sh  env-triton.sh  env.sh  qenv.sh  setup.py  setup_cuda-11.sh  setup_cuda.sh  setup_llvm.sh
lib/llvm-rs/: .gitlab-ci.yml  .rustfmt.toml  Cargo.toml  build.rs
lib/llvm-rs/examples/: disassembler.rs  jit-function.rs  nop-function.rs
lib/llvm-rs/src/: lib.rs
lib/llvm-safe.rs/: Cargo.toml
lib/llvm-safe.rs/examples/kaleidoscope/: README.md
lib/llvm-safe.rs/macros/: Cargo.toml
lib/mlir-rs/macros/: Cargo.toml
tools/ast/: Cargo.toml
tools/ast/src/: ast.rs  ast_traits.rs  attr.rs  expand.rs  format.rs  lexer.rs  lib.rs  mut_visit.rs  node_id.rs  ptr.rs  token.rs  tokenstream.rs  util.rs  visit.rs
tools/ast/src/attr/: mod.rs
tools/ast/src/expand/: mod.rs
tools/ast/src/util/: case.rs  classify.rs  comments.rs  literal.rs  parser.rs  unicode.rs
tools/bindgen/: Cargo.toml  build.rs  callbacks.rs  clang.rs  deps.rs  diagnostics.rs  extra_assertions.rs  features.rs  lib.rs  opts.rs  parse.rs  regex_set.rs  timer.rs
tools/bindgen/codegen/: bitfield_unit.rs  bitfield_unit_tests.rs  debug.rs  dyngen.rs  error.rs  helpers.rs  impl_debug.rs  impl_partialeq.rs  mod.rs  post.rs  postproc.rs  serialize.rs  struct_layout.rs  structure.rs  utils.rs
tools/bindgen/codegen/postprocessing/: merge.rs  merge_extern_blocks.rs  (+2 more)
tools/bindgen/ir/: analysis.rs  annotations.rs  comment.rs  comp.rs  context.rs  ctx.rs  derive.rs  dot.rs  enum_ty.rs  func.rs  function.rs  int.rs  item.rs  item_kind.rs  layout.rs  mod.rs  module.rs  objc.rs  template.rs  traversal.rs  ty.rs  typ.rs  var.rs
tools/bindgen/options/: as_args.rs  helpers.rs  macros.rs  mod.rs
tools/bindgen/src/: clang.rs  lib.rs  opts.rs
tools/bindgen/tests/: lib.rs  parse_callbacks.rs  tests.rs
tools/bindgen/tools/: test.sh
tools/clang/: Cargo.toml  build.rs
tools/clang/bindgen-test/: Cargo.toml
tools/clang/builder/: common.rs  dynamic.rs  macros.rs  static.rs
tools/clang/runtime/: common.rs  dynamic.rs  macros.rs  main.rs  static.rs
tools/clang/src/: hello.rs  lib.rs  link.rs  support.rs  utils.rs
tools/clang/tests/: build.rs  lib.rs  runtime.rs
tools/lexer/: Cargo.toml
tools/lexer/src/: chars.rs  cursor.rs  lib.rs  tests.rs  unescape.rs
tools/llvm/: Cargo.toml  build.rs  build_lib.rs
tools/llvm/examples/: disassembler.rs  jit-function.rs  jit.rs  nop-function.rs
tools/llvm/macros/: Cargo.toml
tools/llvm/old/: Cargo.toml
tools/llvm/src/: attr.rs  attributes.rs  basic_block.rs  block.rs  builder.rs  comdat.rs  context.rs  ctx.rs  dbg.rs  debug.rs  debug_info.rs  execution_engine.rs  intrinsics.rs  lib.rs  memory_buffer.rs  mlir_lib.rs  module.rs  object_file.rs  pass.rs  passes.rs  target.rs  targets.rs  typ.rs  types.rs  utils.rs  val.rs  values.rs
tools/llvm/test/: test_builder.rs  test_debug_info.rs  test_execution_engine.rs  test_instruction_values.rs  test_module.rs  test_object_file.rs  test_passes.rs  test_targets.rs  test_types.rs  test_values.rs
tools/llvm/tests/: attr.rs  block.rs  builder.rs  ctx.rs  debug_info.rs  instruction_conversion.rs  instruction_values.rs  intrinsics.rs  module.rs  object_file.rs  pass.rs  targets.rs  typ.rs  val.rs
tools/parser/: Cargo.toml
tools/parser/examples/: s_expressions.rs
tools/parser/src/: event.rs  grammar.rs  input.rs  kind_gen.rs  lexed.rs  lexed_str.rs  lexer.rs  lib.rs  output.rs  parser.rs  shortcuts.rs  syntax_kind.rs  test.rs  tests.rs  token_set.rs
tools/parser/tests/: all.rs  parser.rs  srcgen.rs  text.rs  tidy.rs
tools/syn/: Cargo.toml  clippy.txt  syn.json
tools/syn/src/: attr.rs  cur.rs  data.rs  err.rs  expr.rs  gen.rs  ident.rs  item.rs  lib.rs  lit.rs  lower.rs  mac.rs  parse.rs  pat.rs  path.rs  pm2.rs  pretty.rs  punct.rs  quote.rs  stmt.rs  structure.rs  tok.rs  typ.rs
tools/syn/tests/: test_expr.rs  test_generics.rs  test_grouping.rs  test_item.rs  test_iterators.rs  test_parse_buffer.rs  test_pat.rs  test_path.rs  test_precedence.rs  test_round_trip.rs  test_size.rs  test_ty.rs
tools/syntax/: Cargo.toml
tools/syntax/examples/: math.rs  s_expressions.rs
tools/syntax/src/: algo.rs  ast.rs  fuzz.rs  hacks.rs  lib.rs  parsing.rs  ptr.rs  syntax_error.rs  syntax_node.rs  ted.rs  tests.rs  text.rs  tmp.rs  token_text.rs  utils.rs  validation.rs
tools/syntax/tests/: all.rs  text.rs
tools/toy/: CMakeLists.txt  main.cpp
tools/triton/: CMakeLists.txt
workshop/: Cargo.toml
workshop/builder/: Cargo.toml
workshop/builder/src/: lib.rs
workshop/builder/tests/: 01-parse.rs  02-create-builder.rs  03-call-setters.rs  04-call-build.rs  05-method-chaining.rs  06-optional-field.rs  07-repeated-field.rs  08-unrecognized-attribute.rs  09-redefined-prelude-types.rs  progress.rs
workshop/seq/: Cargo.toml
workshop/syn/: Cargo.toml  build.rs  clippy.txt  syn.json
workshop/syn/benches/: file.rs  rust.rs
workshop/syn/src/: attr.rs  buffer.rs  cur.rs  custom_keyword.rs  custom_punctuation.rs  data.rs  derive.rs  discouraged.rs  dump.rs  err.rs  error.rs  expr.rs  ext.rs  file.rs  gen.rs  generic.rs  generics.rs  group.rs  ident.rs  item.rs  lib.rs  lifetime.rs  lit.rs  lookahead.rs  lower.rs  mac.rs  macros.rs  meta.rs  op.rs  parse.rs  parse_macro_input.rs  parse_quote.rs  parsing.rs  pat.rs  path.rs  pm2.rs  pretty.rs  printing.rs  punct.rs  punctuated.rs  (+8 more)
workshop/syn/tests/: regression.rs  test_asyncness.rs  test_attribute.rs  test_derive_input.rs  test_expr.rs  test_generics.rs  test_grouping.rs  test_ident.rs  test_item.rs  test_iterators.rs  test_lit.rs  test_meta.rs  test_parse_buffer.rs  test_parse_stream.rs  test_pat.rs  test_path.rs  test_precedence.rs  test_receiver.rs  test_round_trip.rs  test_shebang.rs  test_should_parse.rs  test_size.rs  test_stmt.rs  test_token_trees.rs  test_ty.rs  test_visibility.rs  zzz_stable.rs
workshop/syngen/: Cargo.toml  main.rs
workshop/too-many/: Cargo.toml
workshop/why_async/: Cargo.toml
workshop/why_async/src/: lib.rs  tcp_server.rs
(+1118 files in other folders)
