[workspace]
members = ["tools/syntax"]
# members = ["tools/bindgen", "tools/clang", "tools/lexer", "tools/ast", "tools/llvm/macros", "tools/llvm", "tools/probe_lib", "tools/probe"]
resolver = "2"

[workspace.package]
license = "https://github.com/quantapix/qnarre"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"
authors = ["qnarre"]

[workspace.dependencies]
limit = { path = "../../lib/rust-analyzer/crates/limit" }
