[workspace]
members = ["tools/syn"]
# members = ["workshop", "tools/macros", "tools/parser"]
# members = ["tools/bindgen", "tools/clang", "tools/lexer", "tools/llvm/macros", "tools/llvm", "tools/probe_lib", "tools/probe"]
resolver = "2"

[workspace.package]
license = "https://github.com/quantapix/qnarre"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"
authors = ["qnarre"]

[workspace.dependencies]
# limit = { path = "../../lib/rust-analyzer/crates/limit" }

[profile.dev]
debug = 0

[profile.dev.package]
rustc-hash.opt-level = 3
smol_str.opt-level = 3
text-size.opt-level = 3
miniz_oxide.opt-level = 3

[profile.release]
incremental = true
debug = 0
