[package]
name = "llvm-rs"
version = "17.1.0"
edition = "2021"
build = "build.rs"
# links = "llvm-16"

[features]
strict-versioning = []
no-llvm-linking = []
disable-alltargets-init = []
prefer-dynamic = []
force-dynamic = []
prefer-static = []
force-static = []

[dependencies]
libc = "0.2"
clang-sys = { version = "1.2.2", optional = true }
tempfile = { version = "3.2.0", optional = true }

[build-dependencies]
cc = "1.0"
lazy_static = "1.0"
regex = "1.0"
semver = "1.0.7"
