[package]
name = "llvm-safe"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# links = "llvm-16"

[features]
default = []

[dependencies]
either = "1.5"
macros = { path = "./macros" }
libc = "0.2"
llvm = { path = "../llvm.rs" }
once_cell = "1.16"
parking_lot = "0.12"
static-alloc = { version = "0.2", optional = true }

[dev-dependencies]
regex = "1"
