[package]
name = "ast"
license = "https://github.com/rust-lang/rust/ (04075b32021) & https://github.com/rust-lang/rust-analyzer (06b99d46d)"
version.workspace = true
edition.workspace = true

[lib]

[dependencies]
bitflags = "1.2.1"
lexer = { path = "../lexer" }
memchr = "2.5.0"
rustc_data_structures = { path = "../../lib/rust/compiler/rustc_data_structures" }
rustc_index = { path = "../../lib/rust/compiler/rustc_index" }
rustc_macros = { path = "../../lib/rust/compiler/rustc_macros" }
rustc_serialize = { path = "../../lib/rust/compiler/rustc_serialize" }
rustc_span = { path = "../../lib/rust/compiler/rustc_span" }
smallvec = { version = "1.8.1", features = ["union", "may_dangle"] }
thin-vec = "0.2.12"
tracing = "0.1"
