[package]
name = "bindgen"
license = "https://github.com/rust-lang/rust-bindgen"
version.workspace = true
edition.workspace = true
build = "build.rs"

[lib]
name = "bindgen"
path = "lib.rs"

[dependencies]
bitflags = "2"
cexpr = "0.6"
clang_lib = { path = "../clang", package = "clang" }
lazycell = "1"
lazy_static = "1"
peeking_take_while = "1"
quote = { version = "1", default-features = false }
syn = { version = "2", features = ["full", "extra-traits", "visit-mut"]}
regex = { version = "1", default-features = false, features = ["std", "unicode"] }
which = { version = "4", optional = true, default-features = false }
prettyplease = { version = "0.2" }
shlex = "1"
rustc-hash = "1"
proc-macro2 = { version = "1", default-features = false }
log = "0.4"

[features]
default = ["runtime", "which-rustfmt"]
static = ["clang_lib/static"]
runtime = ["clang_lib/runtime"]
which-rustfmt = ["which"]
