[package]
name = "bindgen"
license = "https://github.com/rust-lang/rust-bindgen"
version.workspace = true
edition.workspace = true
build = "build.rs"

[lib]
name = "bindgen"
path = "lib.rs"

[features]
default = ["runtime", "which-rustfmt"]
static = ["clang_lib/static"]
runtime = ["clang_lib/runtime"]
which-rustfmt = ["which"]

[dependencies]
bitflags = "2"
cexpr = "0.6"
clang_lib = { path = "../clang", package = "clang" }
lazy_static = "1"
lazycell = "1"
log = "0.4"
peeking_take_while = "1"
prettyplease = { version = "0.2" }
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
regex = { version = "1", default-features = false, features = [
    "std",
    "unicode",
] }
rustc-hash = "1"
shlex = "1"
syn = { version = "2", features = ["full", "extra-traits", "visit-mut"] }
which = { version = "4", optional = true, default-features = false }
