[package]
name = "clang"
license = "https://github.com/KyleMayes/clang-sys"
version.workspace = true
edition.workspace = true
build = "build.rs"
# links = "clang"

[features]
default = ["runtime"]
runtime = ["dep:libloading"]
static = []

[dependencies]
glob = "0.3"
libc = { version = "0.2", default-features = false }
libloading = { version = "0.8", optional = true }

[build-dependencies]
glob = "0.3"

[dev-dependencies]
glob = "0.3"
serial_test = "2"
tempfile = "3"
