[package]
name = "lexer"
license = "https://github.com/rust-lang/rust/ (04075b32021) & https://github.com/rust-lang/rust-analyzer (6c73f6799)"
version.workspace = true
edition.workspace = true

[lib]
name = "lexer"
path = "src/lib.rs"

[dependencies]
unicode-xid = "0.2.0"
unic-emoji-char = "0.9.0"

[dev-dependencies]
expect-test = "1.4.0"
