[package]
name = "lexer"
license = "https://github.com/rust-lang/rust/ (04075b32021) & https://github.com/rust-lang/rust-analyzer (06b99d46d)"
version.workspace = true
edition.workspace = true

[lib]
name = "lexer"
path = "src/lib.rs"

[dependencies]
ast = { path = "../ast" }
rustc_errors = { path = "../../lib/rust/compiler/rustc_errors" }
rustc_session = { path = "../../lib/rust/compiler/rustc_session" }
rustc_span = { path = "../../lib/rust/compiler/rustc_span" }

[dev-dependencies]
expect-test = "1.4.0"
