[package]
name = "llvm"
version.workspace = true
edition.workspace = true
build = "build.rs"
# links = "llvm"

[build-dependencies]
bindgen = "0.65.1"

[dependencies]
libc = "0.2"
criterion = "0.4.0"
macros = { path = "./macros" }
once_cell = "1"

[dev-dependencies]
indoc = "2.0.1"
insta = "1.29.0"
pretty_assertions = "1.3.0"

[build-dependencies]
cc = "1.0"
lazy_static = "1.0"
regex = "1.0"
semver = "1.0"

[[bench]]
name = "main"
harness = false
