[package]
name = "llvm"
version.workspace = true
edition.workspace = true
build = "build.rs"
# links = "llvm"

[lib]
name = "llvm"
path = "src/lib.rs"

[features]
#default = ["target-all"]
#target-x86 = []
#target-nvptx = []
#target-all = [
#    "target-x86",
#    "target-nvptx",
#]

[dependencies]
criterion = "0.4"
either = "1.5"
libc = "0.2"
macros = { path = "./macros" }
once_cell = "1"
parking_lot = "0.12"
static-alloc = { version = "0.2", optional = true }

[dev-dependencies]
indoc = "2.0.1"
insta = "1.29.0"
pretty_assertions = "1.3.0"
regex = "1"

[build-dependencies]
bindgen = { path = "../bindgen"}
cc = "1.0"
lazy_static = "1.0"
regex = "1.0"
semver = "1.0"

[[bench]]
name = "main"
harness = false
