[package]
name = "parser"
license = "https://github.com/rust-lang/rust-analyzer (06b99d46d) & https://github.com/rust-analyzer/rowan (06f68c0)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
drop_bomb = "0.1"
# limit.workspace = true

[dev-dependencies]
expect-test = "1.4"
# stdx.workspace = true
# sourcegen.workspace = true
