[package]
name = "parser"
license = "https://github.com/rust-lang/rust-analyzer (06b99d46d) & https://github.com/rust-analyzer/rowan (06f68c0)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
drop_bomb = "0.1"
unic-emoji-char = "0.9"
unicode-xid = "0.2"
xshell = "0.2.2"

# limit.workspace = true

[dev-dependencies]
expect-test = "1.4"
# stdx.workspace = true
# sourcegen.workspace = true
