[package]
name = "parser"
license = "https://github.com/rust-lang/rust-analyzer (06b99d46d) & https://github.com/rust-analyzer/rowan (06f68c0)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
drop_bomb = "0.1"
xshell = "0.2.2"
countme = "3"
either = "1.8"
hashbrown = { version = "0.14", features = [
    "inline-more",
], default-features = false }
indexmap = "2"
itertools = "0.11"
memoffset = "0.9"
once_cell = "1"
serde = { version = "1", optional = true, default-features = false }
rustc-hash = "1.1"
triomphe = { version = "0.1", default-features = false, features = ["std"] }
smol_str = "0.2"
always-assert = { version = "0.1", features = ["log"] }
unic-emoji-char = "0.9"
unicode-xid = "0.2"

[dev-dependencies]
expect-test = "1"
m_lexer = "0.0.4"
proc-macro2 = "1"
quote = "1"
rayon = "1"
ungrammar = "1"
serde_test = "1"
static_assertions = "1"
