[package]
name = "syn"
version.workspace = true
edition.workspace = true
license = "https://github.com/dtolnay/syn (a36a1f7f)"

[dependencies]
unicode-ident = "1"

[dev-dependencies]
anyhow = "1"
automod = "1"
color-backtrace = "0.4"
flate2 = "1"
indexmap = { version = "2", features = ["serde"] }
inflections = "1"
insta = "1"
rayon = "1"
ref-cast = "1"
regex = "1"
reqwest = { version = "0.11", features = ["blocking"] }
rustversion = "1"
semver = { version = "1", features = ["serde"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
syn-test-suite = { version = "0", path = "tests/features" }
tar = "0.4"
termcolor = "1"
thiserror = "1"
toml = "0.5"
walkdir = "2"

#[lib]
#proc-macro = true

[[bin]]
name = "codegen"

[[bench]]
name = "rust"
harness = false

[[bench]]
name = "file"
