[package]
name = "syntax"
license = "https://github.com/rust-lang/rust-analyzer (06b99d46d) & https://github.com/rust-analyzer/rowan (06f68c0)"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
countme = "3.0.0"
cov-mark = "2.0.0-pre.1"
either = "1.7.0"
hashbrown = { version = "0.12", features = [
    "inline-more",
], default-features = false }
indexmap = "1.9.1"
itertools = "0.10.5"
memoffset = "0.9"
once_cell = "1.17.0"
parser.workspace = true
profile.workspace = true
rustc_lexer.workspace = true
rustc-hash = "1.1.0"
serde = { version = "1.0.89", optional = true, default-features = false }
smol_str.workspace = true
stdx.workspace = true
text-edit.workspace = true
text-size = "1.1.0"
triomphe.workspace = true

[dev-dependencies]
expect-test = "1.4.0"
m_lexer = "0.0.4"
proc-macro2 = "1.0.47"
quote = "1.0.20"
rayon = "1.6.1"
sourcegen.workspace = true
test-utils.workspace = true
ungrammar = "1.16.1"

[features]
in-rust-tree = []
serde1 = ["serde", "text-size/serde"]
