[package]
name = "syntax"
license = "https://github.com/rust-lang/rust-analyzer (06b99d46d) & https://github.com/rust-analyzer/rowan (06f68c0)"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
countme = "3"
either = "1.8"
hashbrown = { version = "0.14", features = [
    "inline-more",
], default-features = false }
indexmap = "2"
itertools = "0.11"
memoffset = "0.9"
once_cell = "1.18"
serde = { version = "1", optional = true, default-features = false }
text-size = "1.1"
rustc-hash = "1.1"
triomphe = { version = "0.1.8", default-features = false, features = ["std"] }
smol_str = "0.2"
always-assert = { version = "0.1.2", features = ["log"] }
unic-emoji-char = "0.9.0"
unicode-xid = "0.2.0"

# parser = { path = "../parser" }

# profile.workspace = true
# stdx.workspace = true
# text-edit.workspace = true

[dev-dependencies]
expect-test = "1.4.0"
m_lexer = "0.0.4"
proc-macro2 = "1.0.47"
quote = "1.0.20"
rayon = "1.6.1"
ungrammar = "1.16.1"

# sourcegen.workspace = true
# test-utils.workspace = true

[features]
in-rust-tree = []
serde1 = ["serde", "text-size/serde"]
