[package]
name = "builder"
version.workspace = true
edition.workspace = true
autotests = false
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1", features = ["diff"] }

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { path = "../../tools/syn" }
