[package]
name = "syn"
version.workspace = true
edition.workspace = true
license = "https://github.com/dtolnay/syn (a36a1f7f)"

[features]
default = ["proc-macro"]
proc-macro = ["proc-macro2/proc-macro", "quote/proc-macro"]
test = ["syn-test-suite/all-features"]

[dependencies]
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
unicode-ident = "1"

[dev-dependencies]
anyhow = "1"
automod = "1"
flate2 = "1"
insta = "1"
rayon = "1"
ref-cast = "1"
regex = "1"
reqwest = { version = "0.11", features = ["blocking"] }
rustversion = "1"
syn-test-suite = { version = "0", path = "tests/features" }
tar = "0.4"
termcolor = "1"
walkdir = "2"

[lib]
doc-scrape-examples = false

[[bench]]
name = "rust"
harness = false

[[bench]]
name = "file"

# [workspace]
# members = [
#     "dev",
#     "tests/crates",
#    "tests/features",
#]
