[package]
name = "syngen"
version.workspace = true
edition.workspace = true
license = "https://github.com/dtolnay/syn (a36a1f7f)"

[dependencies]
anyhow = "1"
color-backtrace = "0.4"
indexmap = { version = "2", features = ["serde"] }
inflections = "1"
prettyplease = "0.2"
semver = { version = "1", features = ["serde"] }
serde = "1"
serde_derive = "1"
serde_json = "1"
syn = { path = "../syn" }
thiserror = "1"
toml = "0.5"

[lib]
proc-macro = true

[[bin]]
path = "main.rs"
name = "syngen"
