[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
once_cell = "1.17.1"
proc-macro2 = "1"
quote = "1"
regex = "1.8.1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
mlir = { path = "../mlir" }
# mlir-sys = "0.2"
