[package]
name = "macros"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6"
once_cell = "1"
proc-macro2 = "1"
quote = "1"
regex = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
# mlir = { path = "../mlir" }
# mlir-sys = "0.2"
