[package]
name = "llvm-2-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["target-all"]
no-llvm-linking = ["llvm-rs/no-llvm-linking"]
no-libffi-linking = []
target-x86 = []
target-nvptx = []
target-all = [
    "target-x86",
    "target-nvptx",
]

[dependencies]
either = "1.5"
macros = { path = "./macros" }
libc = "0.2"
llvm-rs = { package = "../llvm-rs", optional = true }
once_cell = "1.16"
parking_lot = "0.12"
static-alloc = { version = "0.2", optional = true }

[dev-dependencies]
regex = "1"
